@@ -21,6 +21,7 @@
 #include <errno.h>
 #include <sys/stat.h>
 #include <sys/types.h>
+#include <libintl.h>
 
 #include <glib/gi18n.h>
 #include <libgnomevfs/gnome-vfs.h>
