@@ -1,3 +1,11 @@
+2004-02-06  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* capplets/font/main.c: (sample_expose):
+	* gnome-settings-daemon/gnome-settings-gtk1theme.c:
+	(apply_settings):
+	* vfs-methods/themus/theme-method.c:
+	64bits fixes.
+
 2004-02-03  Carlos Perelló Marín <carlos@gnome.org>
 
 	* configure.in, capplets/Makefile.am: Removed the localization capplet
